# ScarletWitch-opencode-plugin

./: .gitmodules  README.md  package-lock.json  package.json
scarletwitch/: .gitignore  Makefile  README.md  test.sh  whitelist.conf
scarletwitch/src/: reload.c  sandbox_preload.c
scarletwitch/supervisor/: Cargo.toml
scarletwitch/supervisor/src/: cow.rs  dispatch.rs  main.rs  notif.rs  path.rs  whitelist.rs
scripts/: postinstall.sh
src/: server.ts  state.ts  supervisor.ts  tui.tsx
